# Wan-Deploy-Runpod

./: .gitignore  README.md  README_CURSOR.md  RUNPOD_README.md  pyproject.toml
docker/: Dockerfile  README_DOCKER.md  build_and_push.sh
runpod_video_pipeline/scripts/run/: upload_s3.sh  video_small.sh  wan_shortcuts.sh
runpod_video_pipeline/scripts/setup/: setup_models.sh
runpod_video_pipeline/scripts/utils/: notify.sh  setup_shortcuts.sh
scripts/: README.md  init_setup.sh  quick_build.sh  run_all.sh  setup_models.sh  setup_wan_poetry.sh
scripts/run/: video_small.sh
scripts/setup/: init_setup.sh  setup_env.sh  setup_wan_poetry.sh
scripts/utils/: build_and_push.sh  setup_shortcuts.sh
