[tool.poetry]
name = "wan_deploy_runpod"
version = "0.1.0"
description = "Deployment scripts for Wan2.1 on RunPod"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
transformers = "*"
huggingface-hub = "*"
accelerate = "*"
safetensors = "*"
flash-attn = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 